Exemplo de tema externo

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.17</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>com.formdev</groupId>
+		  <artifactId>flatlaf</artifactId>
+		  <version>1.0</version>
+		</dependency>
 	</dependencies>
 </project>
