--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,19 @@
 		  <artifactId>flatlaf</artifactId>
 		  <version>1.0</version>
 		</dependency>
+		
+		<!-- Dependência para funcionar o FormLayout -->
+		<dependency>
+		    <groupId>com.jgoodies</groupId>
+		    <artifactId>jgoodies-common</artifactId>
+		    <version>1.8.1</version>
+		</dependency>
+		
+		<!-- Dependência para componente de seleção de datas -->
+		<dependency>
+			<groupId>com.github.lgooddatepicker</groupId>
+			<artifactId>LGoodDatePicker</artifactId>
+			<version>10.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
