--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,11 @@
 			<artifactId>LGoodDatePicker</artifactId>
 			<version>10.3.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
 	</dependencies>
 </project>
